# Specter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  LICENSE.txt  README.md
include/: game.hpp  globals.hpp  main.hpp  offsets.hpp
include/core/: ProcessHelper.hpp  logger.hpp  memory.hpp  utils.hpp
include/features/: trigger.hpp
include/game/: entity.hpp  game.hpp
include/utils/: globals.hpp  math.hpp  offsets.hpp  utils.hpp
include/valve/: offsets.hpp
src/: Specter.cpp  game.cpp  logger.cpp  main.cpp  memory.cpp  offsets.cpp
src/core/: ProcessHelper.cpp  logger.cpp  memory.cpp
src/features/: bunnyhop.cpp  trigger.cpp
src/game/: entity.cpp  game.cpp
src/headers/: Specter.h
src/utils/: globals.cpp  math.cpp  offsets.cpp
